--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -53,37 +53,37 @@
         <ul class="mod-bar">
             <input type="hidden" val="0" id="hide_values">
             <li>
-                <a id="category_manager" class=" icon icon-format" href="?c=CategoryManager&a=index">
+                <a id="category_manager" class=" icon icon-format" href="?m=admin&c=CategoryManager&a=index">
                     <span>分类管理</span>
                 </a>
             </li>
             <li>
-                <a id="platform_manager" class=" icon icon-score" href="?c=PlatformManager&a=index">
+                <a id="platform_manager" class=" icon icon-score" href="?m=admin&c=PlatformManager&a=index">
                     <span>平台管理</span>
                 </a>
             </li>
             <li>
-                <a id="account_manager" class=" icon icon-users" href="?c=AccountManager&a=index">
+                <a id="account_manager" class=" icon icon-users" href="?m=admin&c=AccountManager&a=index">
                     <span>账号管理</span>
                 </a>
             </li>
             <li>
-                <a id="pass_manager" class=" icon icon-protect" href="?c=PasswdManager&a=index">
+                <a id="pass_manager" class=" icon icon-protect" href="?m=admin&c=PasswdManager&a=index">
                     <span>密码管理</span>
                 </a>
             </li>
             <li>
-                <a id="icon_depository" class="icon icon-list" href="?c=IconDepository&a=index">
+                <a id="icon_depository" class="icon icon-list" href="?m=admin&c=IconDepository&a=index">
                     <span>图标库</span>
                 </a>
             </li>
             <li>
-                <a id="db_manager" class="iconfont icon-cc-database" href="?c=DbManager&a=index">
+                <a id="db_manager" class="iconfont icon-cc-database" href="?m=admin&c=DbManager&a=index">
                     <span>数据库管理</span>
                 </a>
             </li>
             <li>
-                <a id="rsa_key_manager" class="icon icon-verify" href="?c=RSAKeyManager&a=index">
+                <a id="rsa_key_manager" class="icon icon-verify" href="?m=admin&c=RSAKeyManager&a=index">
                     <span>RSA密钥管理</span>
                 </a>
             </li>
