--- a/public/common/css/login.css
+++ b/public/common/css/login.css
@@ -1,6 +1,6 @@
 /* Wecenter 后台登陆界面 */
 /*body{background:#eff0f4;}*/
-body{background:url('../img/login_bg.jpg') no-repeat #e9f0f4 !important;}
+/*body{background:url('../img/login_bg1.jpg') no-repeat #e9f0f4 !important;margin-bottom: -10px}*/
 .aw-login .mod{width:350px;margin-top:70px;}
 .aw-login .mod h1 img{display:block;width:130px;height:80px;-webkit-animation:fadeInDown 1s .2s ease both;-moz-animation:fadeInDown 1s .2s ease both;margin:0 auto;}
 @-webkit-keyframes fadeInDown{0%{opacity: 0; -webkit-transform: translateY(-20px);} 100%{opacity: 1; -webkit-transform: translateY(0);}}
